# pyproject.toml

[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python_utils"
version = "0.1.0"
description = "A Python package for common utils"
readme = "README.md"
authors = [
    { name="Carlosman1996", email="cmmolinas01@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["proxies", "scripting", "networking"]
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = ["isort", "pip-tools", "pytest", "build", "twine", "flake8"]

[project.urls]
Homepage = "https://github.com/Carlosman1996/python_utils"

[tool.setuptools.packages.find]
where = [""]
